// ConvergeThread ERD — dbdiagram.io syntax
// Source of truth for database structure. Update when migrations change.

Table tenants {
  id int [pk, increment]
  slug varchar(255) [unique, not null]
  admin_email varchar(255) [not null]
  closed_by_id int [null, ref: > users.id, note: 'on delete set null']
  created_at timestamp
  updated_at timestamp
}

Table tenant_roles {
  id int [pk, increment]
  tenant_id int [null, ref: > tenants.id, note: 'on delete cascade']
  is_system boolean [not null, default: false]
  name varchar(100) [not null]
  permissions json [not null]
  created_at timestamp
  updated_at timestamp

  indexes {
    (tenant_id, name) [unique]
    (name, is_system) [unique]
  }
}

Table users {
  id int [pk, increment]
  email varchar(255) [unique, not null]
  password varchar(255) [not null]
  username varchar(100) [not null]
  display_name varchar(100) [null]
  tenant_id int [not null, ref: > tenants.id, note: 'on delete cascade']
  tenant_role_id int [null, ref: > tenant_roles.id, note: 'on delete set null']
  banned_by_id int [null, ref: > users.id, note: 'on delete set null']
  created_at timestamp
  updated_at timestamp

  indexes {
    (tenant_id, username) [unique]
  }
}

Table groups {
  id int [pk, increment]
  tenant_id int [not null, ref: > tenants.id, note: 'on delete cascade']
  name varchar(255) [not null]
  creator_id int [not null, ref: > users.id, note: 'on delete cascade']
  created_at timestamp
  updated_at timestamp
}

Table group_role_overrides {
  id int [pk, increment]
  group_id int [not null, ref: > groups.id, note: 'on delete cascade']
  tenant_role_id int [not null, ref: > tenant_roles.id, note: 'on delete cascade']
  permissions json [null]
  created_at timestamp
  updated_at timestamp
}

Table group_members {
  id int [pk, increment]
  group_id int [not null, ref: > groups.id, note: 'on delete cascade']
  user_id int [not null, ref: > users.id, note: 'on delete cascade']
  group_role_override_id int [null, ref: > group_role_overrides.id, note: 'on delete set null']
  permissions json [null]
  left_at timestamp [null]
  created_at timestamp
  updated_at timestamp
}

Table duos {
  id int [pk, increment]
  group_id int [not null, ref: > groups.id, note: 'on delete cascade']
  name varchar(255) [not null]
  user1_id int [not null, ref: > users.id, note: 'on delete cascade']
  user2_id int [not null, ref: > users.id, note: 'on delete cascade']
  created_at timestamp
  updated_at timestamp

  indexes {
    (user1_id, user2_id) [unique]
  }
}

Table merge_sessions {
  id int [pk, increment]
  started_at timestamp [default: `now()`]
  ended_at timestamp [null]
}

Table merge_session_groups {
  merge_session_id int [pk, ref: > merge_sessions.id, note: 'on delete cascade']
  group_id int [pk, ref: > groups.id, note: 'on delete cascade']
}

Table invitations {
  id int [pk, increment]
  tenant_id int [null, ref: > tenants.id, note: 'on delete cascade — null for owner admin invites']
  group_id int [null, ref: > groups.id, note: 'on delete set null']
  invited_by_id int [not null, ref: > users.id, note: 'on delete cascade']
  tenant_role_id int [null, ref: > tenant_roles.id, note: 'on delete set null']
  email varchar(255) [not null]
  token varchar(100) [unique, not null]
  expires_at timestamp [null]
  accepted_at timestamp [null]
  created_at timestamp [default: `now()`]
}

Table messages {
  id int [pk, increment]
  chatable_id bigint [not null]
  chatable_type varchar(20) [not null]
  user_id int [not null, ref: > users.id, note: 'on delete cascade']
  content text [null]
  is_file boolean [not null, default: false]
  file_path varchar(500) [null]
  parent_id int [null, ref: > messages.id, note: 'on delete cascade']
  created_at timestamp
  updated_at timestamp

  indexes {
    (chatable_id, chatable_type)
  }
}
